<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_30fps_24"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_delete_the_plan"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:fontFamily="@font/bubblegum_sans"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingVertical="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/update_plan"
            android:id="@+id/plan_update_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:fontFamily="@font/andika"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_outline"/>

        <Button
            android:id="@+id/plan_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_outline"
            android:fontFamily="@font/andika"
            android:text="@string/delete_plan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>