<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="25dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_today_24"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_update_the_task"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/bubblegum_sans"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_task"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_the_task_here"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/andika"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_light"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/action_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>