<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/bubblegum_sans"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/application_dashboard"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/title"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_above="@+id/nav_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardCornerRadius="25dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="12.5dp"
                android:onClick="todo">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="25dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_today_24"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/todo_list"
                        android:textAlignment="center"
                        android:textColor="@color/purple_200"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/andika"
                        android:text="@string/save_update_or_delete_your_task_to_stay_in_tune_regularly_and_properly"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardCornerRadius="25dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="12.5dp"
                android:onClick="day_planner">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="25dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_30fps_24"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/day_planner"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserrat"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/purple_200"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plan_your_daily_and_updated_things_sequentially_amp_cordially_gradually"
                        android:layout_marginHorizontal="25dp"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/andika"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardCornerRadius="25dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="12.5dp"
                android:onClick="location">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="25dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_map_24"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/current_location"
                        android:textSize="20sp"
                        android:fontFamily="@font/montserrat"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/purple_200"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/view_your_current_location_and_updated_about_your_nearby_areas_on_daily_basis"
                        android:layout_marginHorizontal="25dp"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/andika"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" />



</RelativeLayout>